<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mortgage Calculator</string>

    <string name="home_value">Home Value</string>
    <string name="down_payment">Down Payment</string>
    <string name="apr">APR</string>
    <string name="terms">Terms</string>

    <string-array name="termsArr">
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
    </string-array>

    <string name="tax_rate">Tax Rate</string>
    <string name="payment">Payment</string>
    <string name="total_tax_paid">Total Tax Paid</string>
    <string name="total_interest_paid">Total Interest Paid</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="pay_off_date">Pay Off Date</string>
    <string name="calculate">Calculate</string>
    <string name="dollar">$</string>
    <string name="percent">%</string>
    <string name="years">Yrs</string>

    <string name="reset">Reset</string>
    <string name="action_settings">Settings</string>
</resources>
