<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:id="@+id/tableLayout"
        android:padding="6dp"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/homeValue">

            <TextView
                android:id="@+id/homeValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/home_value"
                android:textColor="#04ccff"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <EditText
                android:id="@+id/homeValueEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span = "2"
                android:inputType="numberDecimal"
                android:textSize="@dimen/abc_dialog_padding_top_material"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/homeValueDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/dollar"
                android:textColor="#360a2535"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/downPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/downPaymentText"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/down_payment"
                android:textColor="#04ccff"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <EditText
                android:id="@+id/downPaymentEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="numberDecimal"
                android:textSize="@dimen/abc_dialog_padding_top_material"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/downPaymentDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/dollar"
                android:textColor="#360a2535"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/APR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/APRTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/apr"
                android:textColor="#04ccff"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <EditText
                android:id="@+id/APREditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="numberDecimal"
                android:textSize="@dimen/abc_dialog_padding_top_material"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/aprPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/percent"
                android:textColor="#360a2535"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/termsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/terms"
                android:textColor="#04ccff"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:entries="@array/termsArr"
                android:spinnerMode="dropdown"
                android:layout_span="0"
                android:layout_column="0" />

            <TextView
                android:id="@+id/years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/years"
                android:textColor="#360a2535"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/taxrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/taxrateTextView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/tax_rate"
                android:textColor="#04ccff"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <EditText
                android:id="@+id/taxrateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="numberDecimal"
                android:textSize="@dimen/abc_dialog_padding_top_material"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/taxratepercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:text="@string/percent"
                android:textColor="#360a2535"
                android:lines="2"
                android:layout_weight="0"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:id="@+id/calculate"
                android:background="#07f7ff"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="@dimen/abc_text_size_menu_material"
                android:layout_column="1" />
        </TableRow>

    </TableLayout>
</ScrollView>